--- a/.github/workflows/gitartwork.yml
+++ b/.github/workflows/gitartwork.yml
@@ -12,7 +12,7 @@
        - uses: jasineri/gitartwork@v1
          with:
             # Use this username's contribution graph  
-            user_name: RAMCHANDRA
+            user_name: jasineri
             # Text on contribution graph 
             text: RAMCHANDRA
-       - uses: jasiner/simple-push-action@v1
+       - uses: jasineri/simple-push-action@v1
