--- a/.github/workflows/gitartwork.yml
+++ b/.github/workflows/gitartwork.yml
@@ -14,5 +14,5 @@
             # Use this username's contribution graph  
             user_name: ramchandra
             # Text on contribution graph 
-            text: RAMCHANDRA
+            text: Ramchandra
        - uses: jasineri/simple-push-action@v1
